// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders date picker touchable 1`] = `
<View>
  <TouchableIOS
    onPress={[Function]}
  />
</View>
`;

exports[`renders with child component 1`] = `
<View>
  <TouchableIOS
    onPress={[Function]}
  >
    <Text>
      Child Component
    </Text>
  </TouchableIOS>
</View>
`;
